[package]
name = "xedotracker"
version = "0.1.1"
authors = ["Floozutter <floozutter@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
synth = "0.11"
pitch_calc = "0.11"
sample = "0.10"
portaudio = "0.7"
# PortAudio installation for Windows: http://portaudio.com/docs/v19-doxydocs/tutorial_start.html
# Alternative precompiled binary: https://github.com/adfernandes/precompiled-portaudio-windows

[dependencies.cursive]
version = "0.13"
default-features = false

[features]
default = ["crossterm-backend"]
ncurses-backend = ["cursive/ncurses-backend"]
pancurses-backend = ["cursive/pancurses-backend"]
termion-backend = ["cursive/termion-backend"]
crossterm-backend = ["cursive/crossterm-backend"]
blt-backend = ["cursive/blt-backend"]